...

  var loadMapScreen by remember { mutableStateOf(checkForLocationPermission(context)) }
  // Check for location permission
  when (loadMapScreen) {
    true -> {
      Scaffold(
          bottomBar = { NavigationBar(navigation) }, modifier = Modifier.testTag("RecordScreen")) {
              innerPadding ->
            Box(modifier = Modifier.padding(innerPadding).fillMaxSize()) {
              Map(context, viewModel, deviceLocation, mapProperties, uiSettings)
            }
          }
    }
...
              modifier =
                  Modifier.fillMaxWidth().padding(horizontal = 10.dp).align(Alignment.TopCenter),
              horizontalArrangement = Arrangement.SpaceBetween) {
                DisplayCloseButton(viewModel, localLatLngList)
                // Display the record text
                Text(
                    text = "Record",
                    modifier = Modifier.padding(30.dp).testTag("RecordText"),
                    fontSize = 24.sp,
                    fontFamily = Montserrat,
                    fontWeight = FontWeight.SemiBold,
                    color = md_theme_light_dark)
                Spacer(modifier = Modifier.width(50.dp))
...
                                fontWeight = FontWeight.Normal,
                                color = md_theme_grey)
                          },
                          modifier =
                              Modifier.fillMaxWidth(1f)
                                  .padding(top = 5.dp, bottom = 5.dp, start = 30.dp, end = 30.dp)
                                  .testTag("TitleTextField"),
                          textStyle =
                              TextStyle(
                                  color = md_theme_light_onPrimary,
                                  fontSize = 16.sp,
                                  fontFamily = Montserrat,
                                  fontWeight = FontWeight.Normal),
...
                          },
                          modifier =
                              Modifier.fillMaxWidth(1f)
                                  .padding(top = 5.dp, bottom = 5.dp, start = 30.dp, end = 30.dp)
                                  .height(100.dp)
                                  .fillMaxWidth()
                                  .testTag("DescriptionTextField"),
                          textStyle =
                              TextStyle(
                                  color = md_theme_light_onPrimary,
                                  fontSize = 16.sp,
                                  fontFamily = Montserrat,
                                  fontWeight = FontWeight.Normal,
...
      modifier = Modifier.size(150.dp, 70.dp),
      colors =
          ButtonDefaults.filledTonalButtonColors(
              containerColor = md_theme_orange, contentColor = md_theme_light_onPrimary),
  ) {
    Text(
        text = "Save",
        fontSize = 24.sp,
        fontFamily = Montserrat,
        fontWeight = FontWeight.SemiBold,
        color = md_theme_light_onPrimary)
  }
}
...
                      modifier =
                          Modifier.fillMaxWidth(0.9f)
                              .fillMaxHeight(0.5f)
                              .background(md_theme_light_dark, shape = RoundedCornerShape(35.dp))
                              .align(Alignment.Center)) {
                        Row(
                            modifier = Modifier.fillMaxSize().testTag("Timer"),
                            horizontalArrangement = Arrangement.SpaceEvenly) {
                              Text(
                                  text = "TIME",
                                  modifier = Modifier.align(Alignment.CenterVertically),
                                  fontSize = 22.sp,
                                  fontFamily = Montserrat,
                                  fontWeight = FontWeight.SemiBold,
                                  color = md_theme_light_onPrimary)
                              Text(
                                  text = displayTime(timer.longValue),
                                  modifier =
                                      Modifier.align(Alignment.CenterVertically).testTag("Time"),
                                  fontSize = 22.sp,
                                  fontFamily = Montserrat,
                                  fontWeight = FontWeight.SemiBold,
                                  color = md_theme_light_onPrimary)
                            }
                      }
...
 * Function to get the pause/resume string given the view model.
 *
 * @param viewModel The RecordViewModel instance.
 * @return The pause/resume text.
 */
fun getPauseResumeText(viewModel: RecordViewModel): String {
  return if (viewModel.isPaused.value) "Resume" else "Pause"
}

/**
 * Function to toggle the recording description.
 *
 * @param viewModel The RecordViewModel instance.
...
        modifier = Modifier.fillMaxWidth(0.4f).fillMaxHeight(0.08f),
        colors =
            ButtonDefaults.filledTonalButtonColors(
                containerColor = md_theme_orange, contentColor = md_theme_light_onPrimary),
    ) {
      Text(
          text = if (viewModel.isRecording()) "Stop" else "Start",
          fontSize = 24.sp,
          fontFamily = Montserrat,
          fontWeight = FontWeight.SemiBold,
          color = md_theme_light_onPrimary)
    }
  }
...
